# example-rust-webassembly

./: Cargo.toml  README.md
pkg/: kensetsu_bindings.d.ts  kensetsu_bindings.js  kensetsu_bindings_bg.js  kensetsu_bindings_bg.wasm  kensetsu_bindings_bg.wasm.d.ts  package.json
src/: compounding.rs  lib.rs
