[package]
name = "kensetsu-bindings"
version = "0.0.1"
description = "Kensetsu JS bindnings"
edition = "2021"
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/Alexey-N-Chernyshov/example-rust-webassembly'
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
sp-arithmetic = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = ["std", "console_error_panic_hook"]
std = [
    "sp-arithmetic/std",
]

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
