[package]
name = "kensetsu-bindings"
version = "0.0.1"
description = "Kensetsu JS bindnings"
edition = "2021"
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/Alexey-N-Chernyshov/example-rust-webassembly'
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sp-arithmetic = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = ["std"]
std = [
    "sp-arithmetic/std",
]

[profile.release]
strip = true
lto = true
opt-level = "s"
